service/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    app.kubernetes.io/name: web-ingress
spec:
  rules:
    - host: mysite.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: websrvc
                port:
                  number: 8080
